--- a/.github/workflows/myflow.yaml
+++ b/.github/workflows/myflow.yaml
@@ -1,4 +1,4 @@
-name: Cloud N1 OpenWrt
+name: my N1 OpenWrt
 
 on:
   push:
@@ -9,6 +9,9 @@ on:
       - 'config.sh'
   schedule:
     - cron: 0 8 * * 0
+
+watch:
+ types: [started]
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
